<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.zhuorui.securities.openaccount.ui.viewmodel.OAConfirmDocumentsViewModel"/>
    </data>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent" android:layout_height="match_parent">
        <com.zhuorui.commonwidget.ZhuoRuiTopBar
                style="@style/oaDataTipsToptxt"
                app:zr_topbarTitle="@string/zhuorui_openaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <ScrollView
                android:background="@android:color/white"
                android:overScrollMode="never"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.zhuorui.securities.openaccount.widget.OpenAccountStepView
                        android:id="@+id/step"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/openAccountStep"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:zr_openAccountStep="STEP_1"
                />

                <View android:id="@+id/v1"
                      android:layout_width="match_parent"
                      android:layout_height="5dp"
                      android:layout_marginTop="12dp"
                      app:layout_constraintTop_toBottomOf="@+id/step"
                      android:background="@color/app_background_color"
                />

                <TextView
                        android:id="@+id/sub_title"
                        style="@style/openAccountSubTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/v1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:text="@string/str_verification_of_ocument_information"

                />

                <com.zhuorui.commonwidget.ZRTitleEditText
                        android:id="@+id/et_cn_name"
                        style="@style/openAccountItem"
                        android:layout_marginTop="25dp"
                        app:layout_constraintTop_toBottomOf="@+id/sub_title"
                        app:zr_teditTitle="@string/str_chinese_name"
                        tools:ignore="MissingConstraints"/>

                <com.zhuorui.commonwidget.ZRTitleTextView
                        android:id="@+id/et_gender"
                        style="@style/ZRTitleTextViewRightArrow"
                        app:layout_constraintTop_toBottomOf="@+id/et_cn_name"
                        app:zr_ttextviewTitle="@string/str_gender"
                        android:layout_marginTop="10dp"
                        tools:ignore="MissingConstraints"
                />

                <com.zhuorui.commonwidget.ZRTitleTextView
                        android:id="@+id/et_birthday"
                        style="@style/ZRTitleTextViewRightArrow"
                        app:layout_constraintTop_toBottomOf="@+id/et_gender"
                        app:zr_ttextviewTitle="@string/str_date_of_birth"
                        android:layout_marginTop="10dp"
                        tools:ignore="MissingConstraints"
                />

                <com.zhuorui.commonwidget.ZRTitleEditText
                        android:id="@+id/et_idcard_no"
                        style="@style/openAccountItem"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/et_birthday"
                        app:zr_teditTitle="@string/str_id_card_no"
                        tools:ignore="MissingConstraints"/>

                <com.zhuorui.commonwidget.ZRTitleTextView
                        android:id="@+id/et_s_expiry"
                        style="@style/ZRTitleTextViewRightArrow"
                        app:layout_constraintTop_toBottomOf="@+id/et_idcard_no"
                        app:zr_ttextviewTitle="@string/str_validity_period_beginning"
                        android:layout_marginTop="10dp"
                        tools:ignore="MissingConstraints"
                />

                <com.zhuorui.commonwidget.ZRTitleTextView
                        android:id="@+id/et_e_expiry"
                        style="@style/ZRTitleTextViewRightArrow"
                        app:layout_constraintTop_toBottomOf="@+id/et_s_expiry"
                        app:zr_ttextviewTitle="@string/str_validity_period_end"
                        android:layout_marginTop="10dp"
                        tools:ignore="MissingConstraints"
                />

                <com.zhuorui.commonwidget.ZRTitleEditText
                        android:id="@+id/et_address"
                        style="@style/openAccountItem"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/et_e_expiry"
                        app:zr_teditTitle="@string/str_document_address"
                        tools:ignore="MissingConstraints"/>

                <com.zhuorui.commonwidget.StateButton
                        android:id="@+id/btn_per"
                        style="@style/btnStrokeStyle"
                        android:layout_width="96dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/btn_next"
                        app:layout_constraintTop_toBottomOf="@+id/et_address"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="38dp"
                        android:layout_marginBottom="30dp"
                        android:layout_marginLeft="30dp"
                        android:text="@string/str_the_last_step"

                />

                <com.zhuorui.commonwidget.StateButton
                        android:id="@+id/btn_next"
                        style="@style/btnStyle"
                        android:layout_width="0dp"
                        app:layout_constraintLeft_toRightOf="@+id/btn_per"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_address"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="38dp"
                        android:layout_marginBottom="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:text="@string/str_next_step"

                />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </LinearLayout>
</layout>
