<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.zhuorui.securities.openaccount.ui.viewmodel.OAUploadDocumentsViewModel"/>
    </data>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.zhuorui.commonwidget.ZhuoRuiTopBar
                style="@style/oaDataTipsToptxt"
                app:zr_topbarTitle="@string/zhuorui_openaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <ScrollView
                android:background="@android:color/white"
                android:overScrollMode="never"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.zhuorui.securities.openaccount.widget.OpenAccountStepView
                        android:id="@+id/step"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/openAccountStep"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:zr_openAccountStep="STEP_1"
                />

                <View android:id="@+id/v1"
                      android:layout_width="match_parent"
                      android:layout_height="5dp"
                      android:layout_marginTop="12dp"
                      app:layout_constraintTop_toBottomOf="@+id/step"
                      android:background="@color/app_background_color"
                />

                <TextView
                        style="@style/openAccountSubTitle"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="27dp"
                        android:id="@+id/sub_title"
                        android:text="@string/str_upload_id_card_information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/v1"
                        app:layout_constraintLeft_toLeftOf="parent"

                />

                <TextView
                        android:id="@+id/btn_sample"
                        app:layout_constraintTop_toTopOf="@+id/sub_title"
                        app:layout_constraintBottom_toBottomOf="@+id/sub_title"
                        app:layout_constraintLeft_toRightOf="@+id/sub_title"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/take_sample"
                        android:textColor="#1d7eeb"
                        android:textSize="12sp"
                />

                <com.zhuorui.commonwidget.ZRUploadImageView
                        android:id="@+id/idcard_portrait"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="23dp"
                        android:background="@drawable/rectangle_solidf0f0f0_doteeedline616161"
                        app:zr_upimageviewTitle="@string/str_identity_witness_profile"
                        app:zr_upimageviewBtnText="@string/str_photographing_portraits"
                        app:zr_upimageviewPlaceholder="@mipmap/example_idcard_portrait"
                        app:zr_toAlbumRequestCode="101"
                        app:zr_toCameraRequestCode="102"
                        app:layout_constraintTop_toBottomOf="@+id/sub_title"
                        app:zr_upimageviewWatermark="@string/openaccount_watermark"
                />

                <View android:id="@+id/v2"
                      android:layout_width="match_parent"
                      android:layout_height="5dp"
                      android:layout_marginTop="29dp"
                      android:background="@color/app_background_color"
                      app:layout_constraintTop_toBottomOf="@+id/idcard_portrait"
                />

                <com.zhuorui.commonwidget.ZRUploadImageView
                        android:id="@+id/idcard_national_emblem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rectangle_solidf0f0f0_doteeedline616161"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="29dp"
                        app:layout_constraintTop_toBottomOf="@+id/v2"
                        app:zr_upimageviewPlaceholder="@mipmap/example_idcard_national_emblem"
                        app:zr_upimageviewTitle="@string/str_national_emblem_face_of_identity_card"
                        app:zr_upimageviewBtnText="@string/str_shooting_the_national_emblem"
                        app:zr_toAlbumRequestCode="201"
                        app:zr_toCameraRequestCode="202"
                        app:zr_upimageviewWatermark="@string/openaccount_watermark"
                />

                <com.zhuorui.commonwidget.StateButton
                        android:id="@+id/btn_next"
                        style="@style/btnStyle"
                        android:layout_width="0dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/idcard_national_emblem"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:enabled="false"
                        android:layout_marginTop="38dp"
                        android:layout_marginBottom="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:text="@string/str_next_step"

                />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </LinearLayout>
</layout>
